--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<div class="div_red">1</div>
 			<div class="div_green">2</div>
 			<div class="div_blue">3</div>
+			<div class="div_yellow">4</div>
 		 </div>
 		  
 	  </body>
