--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<div class="main_div">
 			<div class="div_red">1</div>
 			<div class="div_green">2</div>
-			<div class="div_blue">3</div>
+			<div class="div_grey">3</div>
+			<div class="div_blue">4</div>
 		 </div>
 		  
 	  </body>
