--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 			<div class="div_red">1</div>
 			<div class="div_green">2</div>
 			<div class="div_blue">3</div>
+			<div class="div_grey">4</div>
+			<div class="div_yellow">5</div>
 		 </div>
 		  
 	  </body>
